--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,7 +46,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/spring_demo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
     username: root
-    password: 123456
+    password: 12345678
 
 ---
 # 测试环境
